--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
     },
     "autoload": {
         "classmap": ["src/", "tests/"],
-        "files": ["src/Utils.php"]
+        "files": ["src/Utils.php", "src/language/language.php"]
     }
 }
